Update Training Model

--- a/Mood-based Food Recommender/Model Prediction with Logistic Regression and Gradient Boosting.ipynb
+++ b/Mood-based Food Recommender/Model Prediction with Logistic Regression and Gradient Boosting.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "87631c8c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "53fa11cf",
    "metadata": {},
    "outputs": [],
@@ -68,15 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "id": "b1145aeb",
    "metadata": {},
    "outputs": [],
    "source": [
     "Gender = 2 #1 for Female, 2 for Male \n",
-    "mood_category = 'happiness' #stress/anxiety, boredom, sadness, happiness/celebration, neutral\n",
+    "mood_category = 'happiness/celebration' #stress/anxiety, boredom, sadness, happiness/celebration, neutral\n",
     "employment = 2  #1 for employed, 2 for unemployed\n",
-    "model_name = 'LogisticRegression' # Choose between GradientBoosting and LogisticRegression"
+    "model_name = 'GradientBoosting' # Choose between GradientBoosting and LogisticRegression"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "id": "1f4299d1",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted food group for the mood input is: Starchy food\n"
+      "The predicted food group for the mood input is: Fat\n"
      ]
     }
    ],
@@ -105,6 +105,14 @@
     "predicted_food_group = load_model_and_predict(Gender, mood_category, employment, model_name)\n",
     "print(f\"The predicted food group for the mood input is: {predicted_food_group}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf23435",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
