Update training model

--- a/Mood-based Food Recommender/Model Prediction with Logistic Regression and Gradient Boosting.ipynb
+++ b/Mood-based Food Recommender/Model Prediction with Logistic Regression and Gradient Boosting.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "87631c8c",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "53fa11cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model_and_predict(Gender, mood_category, employment, model_name):\n",
+    "def load_model_and_predict(mood_category, Gender, cook, employment, model_name):\n",
     "    # Load the OneHotEncoder\n",
     "    encoder_filename = \"one_hot_encoder.pkl\"\n",
     "    ohe = joblib.load(encoder_filename)\n",
@@ -46,10 +46,15 @@
     "    model = joblib.load(model_filename)\n",
     "\n",
     "    new_data = pd.DataFrame({\n",
-    "        'Gender': [Gender],\n",
     "        'mood_category': [mood_category],\n",
+    "        'Gender': [Gender],\n",
+    "        'cook': [cook],\n",
     "        'employment': [employment]\n",
     "    })\n",
+    "#     'Gender': [Gender],\n",
+    "#         'mood_category': [mood_category],\n",
+    "#         'employment': [employment],\n",
+    "#         'cook': [cook]\n",
     "\n",
     "    new_data_encoded = ohe.transform(new_data)\n",
     "\n",
@@ -68,14 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "b1145aeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gender = 2 #1 for Female, 2 for Male \n",
-    "mood_category = 'happiness/celebration' #stress/anxiety, boredom, sadness, happiness/celebration, neutral\n",
+    "Gender = 1 #1 for Female, 2 for Male \n",
+    "mood_category = 'sadness' #stress/anxiety, boredom, sadness, happiness/celebration, neutral\n",
     "employment = 2  #1 for employed, 2 for unemployed\n",
+    "cook = 5\n",
     "model_name = 'GradientBoosting' # Choose between GradientBoosting and LogisticRegression"
    ]
   },
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "1f4299d1",
    "metadata": {},
    "outputs": [
@@ -102,14 +108,14 @@
     }
    ],
    "source": [
-    "predicted_food_group = load_model_and_predict(Gender, mood_category, employment, model_name)\n",
+    "predicted_food_group = load_model_and_predict(mood_category, Gender, cook, employment, model_name)\n",
     "print(f\"The predicted food group for the mood input is: {predicted_food_group}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf23435",
+   "id": "39f96fae",
    "metadata": {},
    "outputs": [],
    "source": []
